--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <span class="title"><%= entry.title %></span>
+  <span class="title"><%= link_to entry.title, entry %></span>
   <span class="body"><%= entry.body %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(entry.created_at) %> ago.
