--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,11 +7,15 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+        <%= render 'shared/stats' %>
+    </section>
   </aside>
   
   <div class="span8">
+    <%= render 'follow_form' if signed_in? %>
     <% if @user.entries.any? %>
-      <h3>Entries (<%= @user.entries.count %>)</h3>
+      <h3 style="font-weight: bold">Entries (<%= @user.entries.count %>)</h3>
       <ol class="entries">
         <%= render @entries %>
       </ol>
