--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,7 @@
 </span>
 <span class="content"><%= comment.content %></span>
 <span class="timestamp">
-  Posted <%= time_ago_in_words(comment.created_at) %> ago.
+  Posted <%= comment.created_at %> ago.
 </span>
 <% if current_user?(comment.user)%>
     <%= link_to "delete", comment, method: :delete,
