--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -2,7 +2,7 @@
   <span class="title"><%= link_to entry.title, entry %></span>
   <span class="body"><%= entry.body %></span>
   <span class="timestamp">
-    Posted <%= time_ago_in_words(entry.created_at) %> ago.
+    Posted <%= entry.created_at %> ago.
   </span>
   <% if current_user?(entry.user)%>
     <%= link_to "delete", entry, method: :delete,
