--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -10,7 +10,9 @@
       <span class="title"><%= link_to entry.title, entry %></span>
       <span class="body"><%= entry.body %></span>
       <span class="timestamp">
-        Posted <%= entry.created_at %> ago.
+        Posted <%= time_ago_in_words(entry.created_at) %> ago at 
+               <%= entry.created_at.day %>/<%= entry.created_at.month %>/
+               <%= entry.created_at.year %>.
       </span>
       <% if current_user?(entry.user)%>
         <%= link_to "delete", entry, method: :delete,
