--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,9 @@
 </span>
 <span class="content"><%= comment.content %></span>
 <span class="timestamp">
-  Posted <%= comment.created_at %> ago.
+  Posted <%= time_ago_in_words(comment.created_at) %> ago at 
+        <%= comment.created_at.day %>/<%= comment.created_at.month %>/
+        <%= comment.created_at.year %>.
 </span>
 <% if current_user?(comment.user)%>
     <%= link_to "delete", comment, method: :delete,
