--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,4 @@
 <% provide(:title, "Help") %>
 
 <h1>Help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<img alt="Rails" src="/assets/rails_large_image.png" />
